Fix spacing in Email preferences (#38)
* Fix spacing in Email preferences

* Add spacing constants and remove !important

--- a/src/PresentationalComponents/Email/email.scss
+++ b/src/PresentationalComponents/Email/email.scss
@@ -14,8 +14,6 @@
             // min and max width, because data lists
             min-width: 155px;
             max-width: 155px;
-
-            @include rem('padding-top', 22px);
         }
         .pf-c-data-list__item:last-of-type { border: 0; }
 
@@ -49,8 +47,18 @@
 
     .pref-u-bold { font-weight: var(--pf-global--FontWeight--bold); }
 
+    div.pref-u-condensed {
+        padding-top: var(--pf-global--spacer--sm);
+        padding-bottom: 0px;
+    }
+
     .pref-email__form-button {
         margin-right: 16px;
+    }
+
+    .pref-email__info-head {
+        display: block;
+        padding-bottom: 0px;
     }
 }
 
@@ -91,5 +99,15 @@
                 padding-top: var(--pf-global--spacer--lg);
             }
         }
+        
+        ul.pf-c-data-list {
+            .pf-c-data-list__item {
+                div.pf-c-data-list__cell.pref-u-condensed {
+                    padding-top: 0px;
+                    padding-bottom: 0px;
+                }
+            }
+        }
     }
 }
+
